<resources>
    <string name="app_name">Wheels</string>
    <string name="title_search">Search</string>
    <string name="title_activity">Activity</string>
    <string name="title_account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="text_login_capital">LOG IN</string>
    <string name="text_signup_capital">SIGN UP</string>
    <string name="text_emailadress">Email address</string>
    <string name="text_password">Password</string>
    <string name="text_forgotpassword">Forgot password?</string>
    <string name="title_onboarding">Onboarding</string>
    <string name="text_vehicle_primary_name">%1$s %2$s</string>
    <string name="text_currency_price_short">MYR %1$s</string>
...
    <string name="text_checkout_total_plural">MYR %1$s (%2$s days)</string>
    <string name="text_per_day">per day</string>
    <string name="text_placeholder_location">Bukit Damansara, Kuala Lumpur</string>
    <string name="text_placeholder_price">MYR 300</string>
    <string name="text_placeholder_vehicle_primary_name">Perodua Bezza</string>
    <string name="text_description_car_image">Car Image</string>
    <string name="text_view_results">View Results</string>
    <string name="text_title_filter">Filter</string>
    <string name="title_trip_history">Trip History</string>
    <string name="title_account_history">Account History</string>
    <string name="text_login_or_signup">Login or Sign Up</string>
    <string name="placeholder_full_name">Full name</string>
    <string name="placeholder_email">username@email.com</string>
    <string name="text_logout">Log Out</string>
    <string name="text_login">Login</string>
    <string name="text_profile">Profile</string>
    <string name="text_delete_profile">Delete Profile</string>
    <string name="text_account">Account</string>
    <string name="text_activities">Activities</string>
    <string name="text_search">Search</string>
    <string name="text_filter">Filter</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_vehicle_detail">Vehicle Detail</string>
    <string name="text_payment">Payment</string>
    <string name="text_proceed">PROCEED</string>
...
