<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/search_navigation"
        android:icon="@drawable/ic_search"
        android:title="@string/title_search" />

    <item
        android:id="@+id/activity_navigation"
        android:icon="@drawable/ic_activity"
        android:title="@string/title_activity" />

    <item
        android:id="@+id/account_navigation"
        android:icon="@drawable/ic_account"
        android:title="@string/title_account" />

</menu>
